OAKHILL/src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Account_Distribution__c</fullName>
        <label>Account Distribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capital_Call__c</fullName>
        <label>Capital Call %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Funds_Due__c</fullName>
        <label>Date Funds Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Wire__c</fullName>
        <label>Date Of Wire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Notice__c</fullName>
        <formula>Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Capital_Call__c</fullName>
        <label>Gross Capital Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incentive_Cap__c</fullName>
        <label>Incentive Cap</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Incentive_Fee__c</fullName>
        <label>Incentive Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Make_Up_Payment_Interest__c</fullName>
        <label>Make-Up Payment (Interest)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Management_Fee__c</fullName>
        <label>Management Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Capital_Call_c__c</fullName>
        <label>Net Capital Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Issue_Eligibility__c</fullName>
        <label>New-Issue Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partial_Full__c</fullName>
        <label>Partial/Full</label>
        <picklist>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refund_Of_Capital_Call__c</fullName>
        <label>Refund Of Capital Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <label>Related Account</label>
        <referenceTo>Related_Account__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Report_Generator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Generator</label>
        <referenceTo>Report_Generator__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shares__c</fullName>
        <label>Shares</label>
        <picklist>
            <picklistValues>
                <fullName>Distributing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Distributing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Side_Letter__c</fullName>
        <label>Side Letter</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Distribution Type</label>
        <picklist>
            <picklistValues>
                <fullName>ESCF Distribution v1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESCF Distribution v2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Type_c__c</fullName>
        <label>Subscription Type</label>
        <picklist>
            <picklistValues>
                <fullName>DCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedge Fund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Distribution__c</fullName>
        <label>Total Distribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD_Equivalent__c</fullName>
        <label>USD Equivalent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id , &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_Account__c</columns>
        <columns>Capital_Call__c</columns>
        <columns>Gross_Capital_Call__c</columns>
        <columns>Net_Capital_Call_c__c</columns>
        <columns>Make_Up_Payment_Interest__c</columns>
        <columns>Refund_Of_Capital_Call__c</columns>
        <columns>Report_Generator__c</columns>
        <columns>Total_Distribution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction__c.Capital_Call</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <recordTypes>
        <fullName>Capital_Call</fullName>
        <active>true</active>
        <label>Capital Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contribution</fullName>
        <active>true</active>
        <label>Contribution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution</fullName>
        <active>true</active>
        <label>Distribution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Redemption</fullName>
        <active>true</active>
        <label>Redemption</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subscription</fullName>
        <active>true</active>
        <label>Subscription</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>